--- a/client/index.html
+++ b/client/index.html
@@ -16,8 +16,8 @@
         <h1 class="welcomemsg"></h1>
     </div>
     <div class="nameinput">
-        <label class="namemsg" for="name">Please enter your name:</label>
-        <input type="text" id="username" name="name">
+        <label class="namemsg" for="name">Please enter your name :</label>
+        <input type="text" id="username" name="name" autocomplete="off" maxlength="12" pattern="[A-Za-z]" required>
         <small class="alert"></small>
         <button id="submitBTN" onclick="saveName()">Save</button>
     </div>
@@ -31,21 +31,73 @@
         <input type="radio" name="i_button" id="i_5" />
         <label for="i_0" class="unchecker"></label>
         <div class="buttons">
-            <label class="key" for="i_1"></label>
-            <label class="key" for="i_2"></label>
-            <label class="key" for="i_3"></label>
-            <label class="key" for="i_4"></label>
-            <label class="key" for="i_5"></label>
+            <span>Christmas Soundboard v1.0</span>
+            <div class="keyss">
+                <label class="key" for="i_1"></label>
+                <label class="key" for="i_2"></label>
+                <label class="key" for="i_3"></label>
+                <label class="key" for="i_4"></label>
+                <label class="key" for="i_5"></label>
+            </div>
         </div>
+       
     </div>
 
+    <style>
+        /* customizable snowflake styling */
+        .snowflake {
+          color: #fff;
+          font-size: 2em;
+          font-family: Arial, sans-serif;
+          text-shadow: 0 0 5px #000;
+        }
+        
+        @-webkit-keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@-webkit-keyframes snowflakes-shake{0%,100%{-webkit-transform:translateX(0);transform:translateX(0)}50%{-webkit-transform:translateX(80px);transform:translateX(80px)}}@keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@keyframes snowflakes-shake{0%,100%{transform:translateX(0)}50%{transform:translateX(80px)}}.snowflake{position:fixed;top:-10%;z-index:9999;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;cursor:default;-webkit-animation-name:snowflakes-fall,snowflakes-shake;-webkit-animation-duration:10s,3s;-webkit-animation-timing-function:linear,ease-in-out;-webkit-animation-iteration-count:infinite,infinite;-webkit-animation-play-state:running,running;animation-name:snowflakes-fall,snowflakes-shake;animation-duration:10s,3s;animation-timing-function:linear,ease-in-out;animation-iteration-count:infinite,infinite;animation-play-state:running,running}.snowflake:nth-of-type(0){left:1%;-webkit-animation-delay:0s,0s;animation-delay:0s,0s}.snowflake:nth-of-type(1){left:10%;-webkit-animation-delay:1s,1s;animation-delay:1s,1s}.snowflake:nth-of-type(2){left:20%;-webkit-animation-delay:6s,.5s;animation-delay:6s,.5s}.snowflake:nth-of-type(3){left:30%;-webkit-animation-delay:4s,2s;animation-delay:4s,2s}.snowflake:nth-of-type(4){left:40%;-webkit-animation-delay:2s,2s;animation-delay:2s,2s}.snowflake:nth-of-type(5){left:50%;-webkit-animation-delay:8s,3s;animation-delay:8s,3s}.snowflake:nth-of-type(6){left:60%;-webkit-animation-delay:6s,2s;animation-delay:6s,2s}.snowflake:nth-of-type(7){left:70%;-webkit-animation-delay:2.5s,1s;animation-delay:2.5s,1s}.snowflake:nth-of-type(8){left:80%;-webkit-animation-delay:1s,0s;animation-delay:1s,0s}.snowflake:nth-of-type(9){left:90%;-webkit-animation-delay:3s,1.5s;animation-delay:3s,1.5s}.snowflake:nth-of-type(10){left:25%;-webkit-animation-delay:2s,0s;animation-delay:2s,0s}.snowflake:nth-of-type(11){left:65%;-webkit-animation-delay:4s,2.5s;animation-delay:4s,2.5s}
+    </style>
+        <div class="snowflakes" aria-hidden="true">
+          <div class="snowflake">
+          ❅
+          </div>
+          <div class="snowflake">
+          ❆
+          </div>
+          <div class="snowflake">
+          ❅
+          </div>
+          <div class="snowflake">
+          ❆
+          </div>
+          <div class="snowflake">
+          ❅
+          </div>
+          <div class="snowflake">
+          ❆
+          </div>
+          <div class="snowflake">
+            ❅
+          </div>
+          <div class="snowflake">
+            ❆
+          </div>
+          <div class="snowflake">
+            ❅
+          </div>
+          <div class="snowflake">
+            ❆
+          </div>
+          <div class="snowflake">
+            ❅
+          </div>
+          <div class="snowflake">
+            ❆
+          </div>
+        </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.0/socket.io.min.js"></script>
     <script src="./js/app.js"></script>
     <script src="./js/sample-player.js"></script>
-    <!-- <script src="/public/js/synth-player.js"></script>-->
     <script>
         localStorage.removeItem('username');
         $("#username").on("change paste keyup", function () {
@@ -60,7 +112,7 @@
     <script>
         function saveName() {
             $(".nameinput").addClass("hidden"); $(".keys").removeClass("hidden");
-            var username = $("#username").val(); $(".welcomemsg").html("Hello " + username);
+            var username = $("#username").val(); $(".welcomemsg").html("Hello, " + username + " !");
         }
     </script>
 </body>
